force-app/main/default/objects/CustomerProposal__c/CustomerProposal__c.object-meta.xml
<CustomObject>
    <description>Objeto criado para mapeamento do histórico de aprovação da proposta.</description>
    <label>Customer Proposal</label>
    <nameField>
        <label>Proposta PDF</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>customersProposal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>