force-app/main/default/objects/CustomerProposal__c/fields/CustomerAcceptance__c.field-meta.xml
<CustomField>
    <fullName>CustomerAcceptance__c</fullName>
    <label>Customer Acceptance</label>
    <length>10</length>
    <type>Text</type>
</CustomField>