force-app/main/default/objects/CustomerProposal__c/fields/QuoteDocumentId__c.field-meta.xml
<CustomField>
    <fullName>QuoteDocumentId__c</fullName>
    <label>Quote Document</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>