force-app/main/default/objects/CustomerProposal__c/fields/QuoteId__c.field-meta.xml
<CustomField>
    <fullName>QuoteId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>customersProposal</relationshipLabel>
    <relationshipName>customersProposal</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>