force-app/main/default/objects/CustomerProposal__c/fields/WhyRejected__c.field-meta.xml
<CustomField>
    <fullName>WhyRejected__c</fullName>
    <description>motivo da rejeição</description>
    <label>Why it was rejected?</label>
    <type>TextArea</type>
</CustomField>