force-app/main/default/objects/CustomerProposal__c/listViews/CEO_CustomerProposal.listView-meta.xml
<ListView>
    <fullName>CEO_CustomerProposal</fullName>
    <filterScope>Queue</filterScope>
    <label>CEO</label>
    <queue>CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>