force-app/main/default/objects/CustomerProposal__c/listViews/Director_CustomerProposal.listView-meta.xml
<ListView>
    <fullName>Director_CustomerProposal</fullName>
    <filterScope>Queue</filterScope>
    <label>Director</label>
    <queue>Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>